rns-lang/test_data/integration/error/parser/outside_class_directive/dot_method.ja

.method public static main ([Ljava/lang/String;)V
.class public HelloWorld
